Finished swagger generated head API
