# head/api/rest/configure_ostopus.go
@@ -3,14 +3,18 @@
 package rest
 
 import (
+	"bytes"
 	"crypto/tls"
 	"encoding/json"
-	"errors"
+	"fmt"
+	"io/ioutil"
 	"net/http"
+	"sync"
+	"time"
 
 	"github.com/AHerczeg/ostopus/head/api/model"
 	"github.com/AHerczeg/ostopus/head/tentacles"
-	"github.com/AHerczeg/ostopus/shared"
+	"github.com/go-openapi/errors"
 	"github.com/go-openapi/runtime"
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/sirupsen/logrus"
@@ -24,11 +28,6 @@ import (
 type pingResponse struct {
 	tentacle string
 	response bool
-}
-
-type restResponse struct {
-	code  int
-	error error
 }
 
 func configureFlags(api *operation.OstopusAPI) {
@@ -49,35 +48,51 @@ func configureAPI(api *operation.OstopusAPI) http.Handler {
 
 	api.JSONProducer = runtime.JSONProducer()
 
-	if api.TentaclePingTentaclesHandler == nil {
-		api.TentaclePingTentaclesHandler = tentacle.PingTentaclesHandlerFunc(func(params tentacle.PingTentaclesParams) middleware.Responder {
-			responses, err := pingTentacles()
-			if err != nil {
-				switch err.Code {
-				case 500:
-					return tentacle.NewPingTentaclesInternalServerError().WithPayload(err)
-				default:
-					return tentacle.NewPingTentaclesDefault(500)
-				}
+	api.TentacleRegisterTentacleHandler = tentacle.RegisterTentacleHandlerFunc(func(params tentacle.RegisterTentacleParams) middleware.Responder {
+		id := registerTentacle(params.Body)
+		if id == 0 {
+			return tentacle.NewPingTentaclesDefault(500)
+		}
+		return tentacle.NewRegisterTentacleCreated().WithPayload(id)
+	})
+
+	api.TentaclePingTentaclesHandler = tentacle.PingTentaclesHandlerFunc(func(params tentacle.PingTentaclesParams) middleware.Responder {
+		responses, err := pingTentacles()
+		if err != nil {
+			switch err.Code {
+			case 500:
+				return tentacle.NewPingTentaclesInternalServerError().WithPayload(err)
+			default:
+				return tentacle.NewPingTentaclesDefault(500)
 			}
-			return tentacle.NewPingTentaclesOK().WithPayload(responses)
-		})
-	}
-	if api.TentacleQueryTentaclesHandler == nil {
-		api.TentacleQueryTentaclesHandler = tentacle.QueryTentaclesHandlerFunc(func(params tentacle.QueryTentaclesParams) middleware.Responder {
-			return middleware.NotImplemented("operation tentacle.QueryTentacles has not yet been implemented")
-		})
-	}
-	if api.TentacleRegisterTentacleHandler == nil {
-		api.TentacleRegisterTentacleHandler = tentacle.RegisterTentacleHandlerFunc(func(params tentacle.RegisterTentacleParams) middleware.Responder {
-			return middleware.NotImplemented("operation tentacle.RegisterTentacle has not yet been implemented")
-		})
-	}
-	if api.TentacleRemoveTentacleHandler == nil {
-		api.TentacleRemoveTentacleHandler = tentacle.RemoveTentacleHandlerFunc(func(params tentacle.RemoveTentacleParams) middleware.Responder {
-			return middleware.NotImplemented("operation tentacle.RemoveTentacle has not yet been implemented")
-		})
-	}
+		}
+		return tentacle.NewPingTentaclesOK().WithPayload(responses)
+	})
+
+	api.TentacleQueryTentaclesHandler = tentacle.QueryTentaclesHandlerFunc(func(params tentacle.QueryTentaclesParams) middleware.Responder {
+		result, err := relayQuery(params.Body)
+		if err != nil {
+			switch err.Code {
+			case 500:
+				return tentacle.NewQueryTentaclesInternalServerError().WithPayload(err)
+			default:
+				return tentacle.NewQueryTentaclesDefault(500)
+			}
+		}
+		return tentacle.NewQueryTentaclesOK().WithPayload(result)
+	})
+
+	api.TentacleRemoveTentacleHandler = tentacle.RemoveTentacleHandlerFunc(func(params tentacle.RemoveTentacleParams) middleware.Responder {
+		if err := removeTentacle(params.ID); err != nil {
+			switch err.Code {
+			case 404:
+				return tentacle.NewRemoveTentacleNotFound()
+			default:
+				return tentacle.NewRemoveTentacleDefault(500)
+			}
+		}
+		return tentacle.NewRemoveTentacleDefault(204)
+	})
 
 	api.ServerShutdown = func() {}
 
@@ -106,6 +121,13 @@ func setupMiddlewares(handler http.Handler) http.Handler {
 // So this is a good place to plug in a panic handling middleware, logging and metrics
 func setupGlobalMiddleware(handler http.Handler) http.Handler {
 	return handler
+}
+
+func registerTentacle(tentacle *model.Tentacle) int64 {
+	tentacle.ID = time.Now().UnixNano()
+	tentacles.Tentacles().SaveTentacle(*tentacle)
+	logrus.WithFields(logrus.Fields{"Name": tentacle.Name, "Address": tentacle.Address}).Info("New tentacle registered")
+	return tentacle.ID
 }
 
 func pingTentacles() (string, *model.Error) {
@@ -141,9 +163,9 @@ func pingTentacles() (string, *model.Error) {
 	return string(marshaledResults), nil
 }
 
-func pingTentacle(tentacle shared.Tentacle, response chan<- pingResponse) {
+func pingTentacle(tentacle model.Tentacle, response chan<- pingResponse) {
 	logrus.WithFields(logrus.Fields{"name": tentacle.Name, "address": tentacle.Address}).Info("Pinging tentacle")
-	res, err := http.Get(tentacle.Address + "/ping")
+	res, err := http.Get(*tentacle.Address + "/ping")
 	if err != nil {
 		logrus.WithError(err)
 		response <- pingResponse{
@@ -160,4 +182,77 @@ func pingTentacle(tentacle shared.Tentacle, response chan<- pingResponse) {
 	}
 
 	logrus.WithFields(logrus.Fields{"name": tentacle.Name, "address": tentacle.Address}).Info("Finished pinging tentacle")
+}
+
+func relayQuery(query *model.Query) (*model.Result, *model.Error) {
+
+	//TODO validate query
+
+	marshaledCommand, err := json.Marshal(query.Command)
+	if err != nil {
+		logrus.Error(err)
+		return nil, &model.Error{Code: 500, Message: "unexpected error while parsing query"}
+	}
+
+	var results sync.Map
+	var wg sync.WaitGroup
+
+	for _, target := range query.Target {
+		if storedTentacle, ok := tentacles.Tentacles().GetTentacle(target); ok {
+			wg.Add(1)
+			go syncQuery(marshaledCommand, &storedTentacle, &results, &wg)
+		} else {
+			results.Store(target, "unknown target")
+		}
+	}
+
+	wg.Wait()
+
+	return mapToResult(results), nil
+
+}
+
+func syncQuery(query []byte, tentacle *model.Tentacle, results *sync.Map, wg *sync.WaitGroup) {
+	defer wg.Done()
+	results.Store(tentacle.ID, sendQuery(query, *tentacle.Address))
+}
+
+func sendQuery(query []byte, address string) string {
+	req, err := http.NewRequest("POST", address+"/query", bytes.NewBuffer(query))
+
+	client := &http.Client{Timeout: time.Second * 10}
+
+	resp, err := client.Do(req)
+	defer resp.Body.Close()
+	if err != nil {
+		return "error while processing response"
+	}
+
+	if resp.StatusCode != http.StatusOK {
+		return fmt.Sprintf("failed query: code %d", resp.StatusCode)
+	}
+
+	bodyBytes, err := ioutil.ReadAll(resp.Body)
+	if err != nil {
+		return "error while reading response"
+	}
+	return string(bodyBytes)
+
+}
+
+func mapToResult(syncMap sync.Map) *model.Result {
+	var result model.Result
+
+	syncMap.Range(func(k, v interface{}) bool {
+		result.Payload = append(result.Payload, &model.ResultPayloadItems0{ID: k.(int64), Result: v.(string)})
+		return true
+	})
+	return &result
+}
+
+func removeTentacle(id int64) *model.Error {
+	if ok := tentacles.Tentacles().RemoveTentacle(id); !ok {
+		return &model.Error{Code: 404, Message: "tentacle not found"}
+	}
+	return nil
 }
